Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="without-description">
+      <header>
         <h1>Rockeen</h1>
-        <p></p>
+        <p>Never Give Up</p>
         <p class="view"><a href="https://github.com/rockeen">View the Project on GitHub <small>rockeen</small></a></p>
         <ul>
           <li class="single"><a href="https://github.com/rockeen/rockeen.github.io">View On <strong>GitHub</strong></a></li>
@@ -26,9 +26,14 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-rockeen" class="anchor" href="#welcome-to-rockeen" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to rockeen.</h3>
+<a id="welcome-to-rockeens-site" class="anchor" href="#welcome-to-rockeens-site" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Welcome to rockeen‘s site</strong>.</h3>
 
-<p><a href="http://write.blog.csdn.net/postlist">我的CSDN</a></p>
+<ul>
+<li>我的CSDN地址：<a href="http://write.blog.csdn.net/postlist">http://write.blog.csdn.net/postlist</a><br>
+</li>
+<li>我的weibo地址：<a href="http://weibo.com/rockseay">http://weibo.com/rockseay</a><br>
+</li>
+</ul>
       </section>
     </div>
     <footer>
