Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-rockeens-site" class="anchor" href="#welcome-to-rockeens-site" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Welcome to rockeen‘s site</strong>.</h3>
+<a id="welcome-to-my-site" class="anchor" href="#welcome-to-my-site" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Welcome to my site</strong>.</h3>
 
 <ul>
-<li>我的CSDN地址：<a href="http://write.blog.csdn.net/postlist">http://write.blog.csdn.net/postlist</a><br>
+<li>My CSDN address：<a href="http://write.blog.csdn.net/postlist">http://write.blog.csdn.net/postlist</a><br>
 </li>
-<li>我的weibo地址：<a href="http://weibo.com/rockseay">http://weibo.com/rockseay</a><br>
+<li>My github address： <a href="https://github.com/rockeen">https://github.com/rockeen</a><br>
+</li>
+<li>My micro blog address：<a href="http://weibo.com/rockseay">http://weibo.com/rockseay</a><br>
 </li>
 </ul>
       </section>
